Prearchive session API added